[package]
name = "mkpkg"
version = "0.1.0"
authors = ["Alex Lyon <alexlyon@baidu.com>"]
description = "A tool to build Mesalock Linux packages"

[dependencies]
serde = "1.0.64"
serde_derive = "1.0.64"
serde_yaml = "0.7.4"
clap = "2.31.2"
reqwest = "0.8.5"
ansi_term = "0.11.0"
#indicatif = "0.9.0"
indicatif = { git = "https://github.com/mitsuhiko/indicatif" }
rayon = "1.0.1"
failure = "0.1.1"
failure_derive = "0.1.1"
libflate = "0.1.14"
tar = "0.4.15"
semver = { version = "0.9.0", features = ["serde"] }
url = "1.7.0"
url_serde = "0.2.0"
tempfile = "3.0.2"
# the following are bindings to code written in C
git2 = "0.7.1"
bzip2 = "0.3.3"
