[package]
name = "mkpkg"
version = "0.1.0"
authors = ["Alex Lyon <alexlyon@baidu.com>"]
description = "A tool to build Mesalock Linux packages"

[dependencies]
serde = "1.0.64"
serde_derive = "1.0.64"
serde_yaml = "0.8.7"
clap = "2.31.2"
reqwest = "0.8.5"
ansi_term = "0.11.0"
indicatif = "0.9.0"
crossbeam = "0.5.0"
crossbeam-utils = "0.6"
num_cpus = "1.8.0"
failure = "0.1.1"
failure_derive = "0.1.1"
tar = "0.4.19"
semver = { version = "0.9.0", features = ["serde"] }
url = "1.7.0"
tempfile = "3.0.2"
unicode-xid = "0.1.0"
term_size = "1.0.0-beta1"
walkdir = "2.2.7"
# the following are bindings to code written in C
git2 = "0.7.1"
bzip2 = "0.3.3"
flate2 = "1.0.1"
xz2 = "0.1.5"
